# Saturn-SDK-IDE

./: .gitignore  ChangeLog  Makefile.am  README  TODO  acinclude.m4  build-ide.bat  build-ide.sh  build.bat  build.sh  build_win-ide.sh  build_win.sh  cc_calltip-2.patch  codeblocks.spec.in  configure.ac  configure.in  createinstaller.bat  createinstaller.sh  createinstaller_win.sh  manifest.xml  update.bat  updateChangeLog.sh  update_revision.sh  wxSmith.cbp  wxsadvqpp.cpp  wxsadvqpp.h  wxsadvqppchild.cpp  wxscoder.cpp  wxscoder.h  wxscodinglang.cpp  wxscodinglang.h  wxseditor.cpp  wxsextresmanager.cpp  wxsextresmanager.h  wxsglobals.h  wxsgui.cpp  wxsgui.h  wxsguifactory.cpp  wxsguifactory.h  wxsmith.cpp  (+17 more)
src/: ChangeLog  CodeBlocks-NewBuild-UNI.cbp  CodeBlocks-NewBuild.cbp  CodeBlocks-rick.cbp  CodeBlocks-unix-wx2.6.0.cbp  CodeBlocks-unix.cbp  CodeBlocks-wx2.6.0.cbp  CodeBlocks.cbp  CodeBlocks_wx29-unix.cbp  CodeBlocks_wx29.cbp  ContribPlugins-unix.workspace  ContribPlugins.workspace  Makefile  Makefile.am  Makefile.unix  Makefile.unix.wx2.6  Makefile.wx2.6  sdk.doxy  update  update.bat  update.sh  update29  update29.bat  update_con  update_con29  xxx SCRATCHPAD xxx.txt  xxx TODO_MERGE xxx.txt
src/chaos/: buildsystem.cpp  buildsystem.h  buildtoolmanager.cpp  buildtoolmanager.h  tidobject.h
src/include/: Makefile.am  annoyingdialog.h  annoyingdialog_base.h  autorevision.h.in  backtracedlg.h  breakpointsdlg.h  cbdebugger_interfaces.h  cbeditor.h  cbplugin.h  cbplugin_base.h  cbproject.h  cbstyledtextctrl.h  cbworkspace.h  compiler.h  compiletargetbase.h  configmanager.h  cpuregistersdlg.h  debuggermanager.h  debuggermenu.h  disassemblydlg.h  editbreakpointdlg.h  editorbase.h  editorconfigurationdlg.h  encodingdetector.h  examinememorydlg.h  globals.h  globals_base.h  ibaseloader.h  infowindow.h  infowindow_base.h  loggers.h  macrosmanager.h  manager.h  menuitemsmanager.h  pluginmanager.h  pluginmanager_base.h  prep.h  projectfile.h  projectfileoptionsdlg.h  projectloader.h  (+10 more)
src/plugins/: Makefile.am
src/plugins/astyle/: Makefile.am  astyleconfigdlg.cpp  astyleplugin.cpp  formattersettings.cpp
src/plugins/blocks/: LzmaUtilsCommon.h  blocks.cpp  blocks.h  blocks.xrc  dl.cpp  dl.h  example_block.xml  lzma.txt  lzmadec.c  mytar.cpp  mytar.h  version.h
src/plugins/classwizard/: classwizard.cpp  classwizarddlg.cpp
src/plugins/codecompletion/: Makefile.am  cc_test-unix.cbp  cc_test.cbp  ccdebuginfo.cpp  ccdebuginfo.h  cclist.cpp  cclist.h  cclistctrl.cpp  ccoptionsdlg.cpp  ccoptionsdlg.h  ccoptionsprjdlg.cpp  ccoptionsprjdlg.h  classbrowser.cpp  classbrowser.h  classbrowserbuilder.cpp  classbrowserbuilder.h  classbrowserbuilderthread.cpp  classbrowserbuilderthread.h  codecompletion.cpp  codecompletion.cpp.orig  codecompletion.h  coderefactoring.cpp  coderefactoring.h  insertclassmethoddlg.cpp  insertclassmethoddlg.h  nativeparser.cpp  nativeparser.cpp.orig  nativeparser.h  selectincludefile.cpp  statemachinehelper.h
src/plugins/compilergcc/: Makefile.am  advancedcompileroptionsdlg.cpp  compilerBCC.cpp  compilerBCC.h  compilerCYGWIN.cpp  compilerCYGWIN.h  compilerDMC.cpp  compilerDMC.h  compilerDMD.cpp  compilerDMD.h  compilerG95.cpp  compilerGDC.cpp  compilerGNUARM.cpp  compilerGNUAVR.cpp  compilerGNUAVR.h  compilerGNUFortran.cpp  compilerGNUMSP430.cpp  compilerGNUMSP430.h  compilerGNUPOWERPC.cpp  compilerGNUPOWERPC.h  compilerGNUTRICORE.cpp  compilerGNUTRICORE.h  compilerICC.cpp  compilerLCC.cpp  compilerLCC.h  compilerLDC.cpp  compilerLDC.h  compilerMINGW.cpp  compilerMINGW.h  compilerMSVC.cpp  compilerMSVC.h  compilerMSVC10.cpp  compilerMSVC10.h  compilerMSVC8.cpp  compilerMSVC8.h  compilerOW.cpp  compilerOW.h  compilerOWgenerator.cpp  compilerOWgenerator.h  compilerPGIFortran.cpp  (+18 more)
src/plugins/contrib/: Makefile.am
src/plugins/debuggergdb/: Makefile.am  breakpointsdlg.cpp  breakpointsdlg.h  cdb_commands.h  cdb_driver.cpp  cdb_driver.h  databreakpointdlg.cpp  databreakpointdlg.h  debugger_cmds.h  debugger_commands.h  debugger_defs.cpp  debugger_defs.h  debuggerdriver.cpp  debuggerdriver.h  debuggergdb.cpp  debuggergdb.h  debuggergdb_test-unix.cbp  debuggergdb_test.cbp  debuggergdb_test_backtrace.cpp  debuggergdb_test_common.h  debuggergdb_test_parser.cpp  debuggergdb_test_parser_cdb.cpp  debuggeroptionsdlg.cpp  (+19 more)
src/scripts/: Makefile.am  gdb_types.script  startup.script
src/sdk/: Makefile.am  annoyingdialog.cpp  annoyingdialog_base.cpp  autodetectcompilers.cpp  backgroundthread.h  backtracedlg.cpp  breakpointsdlg.cpp  cbdebugger_interfaces.cpp  cbeditor.cpp  cbeditor.h  cbexception.h  cbplugin.cpp  cbplugin.h  cbproject.cpp  cbproject.h  cbstyledtextctrl.cpp  cbworkspace.cpp  compiler.cpp  compilercommandgenerator.cpp  compilerfactory.cpp  compiletargetbase.cpp  config-testsuite.cpp  configmanager.cpp  configmanager.h  configuretoolsdlg.cpp  confirmreplacedlg.cpp  confirmreplacedlg.h  cpuregistersdlg.cpp  crc32.cpp  customvars.cpp  debuggermanager.cpp  debuggermenu.cpp  disassemblydlg.cpp  editarrayfiledlg.cpp  editarrayorderdlg.cpp  editarraystringdlg.cpp  editbreakpointdlg.cpp  editkeywordsdlg.cpp  editorbase.cpp  editorbase.h  (+87 more)
src/setup/: CodeBlocks_Core.iss  CodeBlocks_MINGW.iss
src/src/: Makefile.am  app.cpp  app.h  appglobals.cpp  appglobals.h  associations.cpp  backtracedlg.cpp  backtracedlg.h  batchbuild.h  breakpointsdlg.cpp  breakpointsdlg.h  compilersettingsdlg.cpp  compilersettingsdlg.h  cpuregistersdlg.cpp  cpuregistersdlg.h  debugger_interface_creator.cpp  debugger_interface_creator.h  debuggermenu.cpp  debuggermenu.h  debuggersettingscommonpanel.cpp  debuggersettingscommonpanel.h  debuggersettingsdlg.cpp  debuggersettingspanel.cpp  disassemblydlg.cpp  disassemblydlg.h  dlgabout.cpp  dlgabout.h  environmentsettingsdlg.cpp  environmentsettingsdlg.h  examinememorydlg.cpp  examinememorydlg.h  globals.h  impexpconfig.cpp  infopane.cpp  infopane.h  main.cpp  main.h  notebookstyles.cpp  notebookstyles.h  printdlg.cpp  (+12 more)
src/wxsmith/: CCDebugInfo.wxs  CompilerPanel.wxs  databreakpointdlg.wxs  debuggersettingscommonpanel.wxs  debuggersettingsdlg.wxs
(+1249 files in other folders)
