SUBDIRS = wxchart-1.0 wxFlatNotebook wxthings wxImagePanel .

EXTRA_DIST = $(srcdir)/wxchart-1.0/include/wx/chartart/*.xpm \
		$(srcdir)/wxchart-1.0/include/wx/chartart/*.bmp
		$(srcdir)/*.cbp

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = wxsmith-contrib.pc wxchartctrl.pc wxcustombutton.pc wxflatnotebook.pc wximagepanel.pc


