SUBDIRS = wxchart wxFlatNotebook wxthings wxImagePanel .

EXTRA_DIST = $(srcdir)/wxchart/include/wx/chartart/*.xpm \
		$(srcdir)/wxchart/include/wx/chartart/*.bmp
		$(srcdir)/*.cbp

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = wxsmith-contrib.pc wxchartctrl.pc wxcustombutton.pc wxflatnotebook.pc wximagepanel.pc


